--- a/_posts/0000-01-01-intro.md
+++ b/_posts/0000-01-01-intro.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our slide deck!"
+title: "Welcome to GitHub teachers slide deck!"
 ---
-
+This is awesome slide
 Use the right arrow to begin!
